Search bar dark mode bug fixed

--- a/onelineaday-client/src/App.css
+++ b/onelineaday-client/src/App.css
@@ -156,6 +156,7 @@ button {
 }
 
 .search-div {
+  background-color: white;
   display: flex;
   align-items: center;
   border: 1px solid #00b5ad;
